added chapter 3 scip notes

--- a/20210729191820-animesearch.org
+++ b/20210729191820-animesearch.org
@@ -3,17 +3,8 @@
 :END:
 #+title: AnimeSearch
 
-* Pipeline
-  1. Sentencizer: Divides the reviews into sentences of desired length. [[https://www.kaggle.com/iamparadox/pipeline-sentencizer/edit][Kaggle Notebook: Pipeline Sentencizer]]
-  2. Summarizer: "Summarizes" the reviews to extract important information in review related to that anime. [[https://www.kaggle.com/iamparadox/pipeline-summarizer/edit][Kaggle Notebook: Pipeline Summarizer]]
-  3. Fine Tuning: finetune the transformer model for specific domain. **Kaggle Notebook: Pipeline Finetuning**
+#+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 
-
-* Anime Context
-
-== Problem == How to take more context of anime given a query aside from semantic similarity of a sentence of review?
-
-** Readings
-1. [[https://arxiv.org/pdf/1812.10901v1.pdf][Knowlege graph]]
-2. [[id:db4674ca-ba8b-4264-b855-595c33d3f345][Gaussian Mixture Models]]
-3. [[https://towardsdatascience.com/the-5-clustering-algorithms-data-scientists-need-to-know-a36d136ef68][Clustering Algorithms]]
+* Animesearch
+  - [[id:68431601-04f2-4a8b-96dc-6d9766cbfea7][AnimeSearch Research]]: all research related information.
+  - [[id:1cd69afb-5314-4ac0-aef4-a2d733d9ce9f][AnimeSearch Program]]: all programming/code related information.
