--- a/20210818183431-likelihood.org
+++ b/20210818183431-likelihood.org
@@ -3,8 +3,9 @@
 :END:
 #+title: Likelihood
 
-* Likelihood function
+#+SETUPFILE: https://fniessen.github.io/org-html-themes/org/theme-readtheorg.setup
 
+* Likelihood function
 ** Definition
     Likelihood measures the goodess of the fit of a statistical model to a sample of data.
 
