--- a/20210830071920-determinants.org
+++ b/20210830071920-determinants.org
@@ -8,4 +8,18 @@
 Think of determinats as norm of a vector but for matrix. what it does is maps some $$f: M_{n,n} \rightarrow \mathbb{R} $$ just like
 what norm does to a vector. Generally speaking norm measures the length of the vector just like that  $$det(A)$$
 of a matrix measures volue of that matrix.
-** [[https://math.stackexchange.com/questions/249919/for-deta-0-how-do-we-know-if-a-has-no-solution-or-infinitely-many-soluti][intution behind determinats]].
+
+Therefore, determinats gives scaling factor and the oreintation induced of by mapping representend by a matrix.
+
+Due to this $$det(I_{n,n})=1$$ because this measures the volume of matrix in $$R^{n}$$. If one of the row/column is zero/same then
+the volume of $$R^{n}$$ dimension will also be zero.
+
+*** [[https://math.stackexchange.com/questions/249919/for-deta-0-how-do-we-know-if-a-has-no-solution-or-infinitely-many-soluti][intution behind determinats]]
+
+*** [[https://en.wikipedia.org/wiki/Determinant][Geometric meaning of determinants]]
+
+** why we can't take determinants of non-square matrix?
+*** Explantion
+
+
+*** [[https://math.stackexchange.com/questions/854180/determinant-of-a-non-square-matrix][why determinats of non-square matrix doesn't exist?]]
